<resources>
    <string name="app_name">Gilded</string>

    <string name="home">Inici</string>
    <string name="add">Afegir</string>
    <string name="income">Ingressos</string>
    <string name="expenses">Despeses</string>
    <string name="transactions">Transaccions</string>

    <string name="create_receipt">Crear rebut</string>
    <string name="edit_receipt">Editar rebut</string>
    <string name="delete_receipt">Borrar rebut</string>

    <string name="category">Categoria</string>

    <string name="recipient">Beneficiari</string>
    <string name="amount">Quantitat</string>
    <string name="date">Data</string>
    <string name="time">Temps</string>

    <string name="last_week">Ultims 7 Dies</string>
    <string name="last_month">Ultims 30 Dies</string>
    <string name="last_year">Ultims 365 Dies</string>
    <string name="all_time">Tot</string>

    <string name="login">Iniciar Sessió</string>
    <string name="signin">Registrar-se</string>

    <string name="username">Nom d\'usuari</string>
    <string name="email">Correu electrònic</string>
    <string name="password">Contrasenya</string>

    <string name="create_category">Crear categoria</string>

    <string name="pick_color">Seleccionar color</string>

    <string name="receipts">Rebuts</string>
    <string name="receipts_help">Els rebuts es creen desde "Afegir" al menú de navegació inferior, requereixen un nom, una data/hora i categoria a la que asociar-se per facilitar-te filtrar a través dels teus rebuts i generar gràfics.</string>

    <string name="categories">Categories</string>
    <string name="categories_help">Les categories permeten filtrar entre els teus rebuts i representar-los a gràfics, les representen una imatge i un color.</string>

    <string name="income_help">El menu d\'ingressos representa ingressos en un marc de temps segons categoria i total.</string>
    <string name="expenses_help">El menu de despeses representa despeses en un marc de temps segons categoria i total.</string>

    <string name="pick_currency">Seleccionar moneda</string>

    <string name="search">Busca...</string>

    <string name="reset_filter">Restablir filtre</string>

    <string name="usage_data">Dades d\'ús</string>
</resources>